--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
     .navbar.navbar-fixed-top
       .navbar-inner
         .container-fluid
-          = link_to "ShottenTotten", root_path, class: "brand"
+          = link_to "Schotten Totten", root_path, class: "brand"
           .nav-collapse
             %ul.nav
               %li.active= link_to "Home", root_path
@@ -22,9 +22,6 @@
       .row-fluid
         - flash.each do |name, msg|
           = content_tag :div, msg, id: "flash_#{name}"
-
-        - if show_title?
-          %h1= yield :title
 
         = yield
 
