Setup layout for game

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
 
   %head
     %title
-      = content_for?(:title) ? yield(:title) : "ShottenTotten"
+      = content_for?(:title) ? yield(:title) : "Schotten Totten"
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
     = stylesheet_link_tag "application", media: "all"
     = csrf_meta_tag
