--- a/app/assets/stylesheets/schotten_totten.css.scss
+++ b/app/assets/stylesheets/schotten_totten.css.scss
@@ -2,6 +2,10 @@ body {
   background: #202020;
 }
 
+#game {
+  float: left;
+}
+
 canvas {
   display: block;
   width: 900px;
@@ -14,4 +18,21 @@ canvas {
 
 #overlapping canvas {
   margin: -600px 0 0;
+}
+
+#users {
+  float: left;
+  width: 280px;
+  padding: 0 10px;
+}
+
+.user {
+  color: white;
+  font-size: 25px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.clr {
+  clear: both;
 }
