--- a/app/assets/stylesheets/schotten_totten.css.scss
+++ b/app/assets/stylesheets/schotten_totten.css.scss
@@ -1,5 +1,5 @@
 body {
-  background: #202020;
+  background: #dddddd;
 }
 
 #game {
@@ -13,7 +13,7 @@ canvas {
 }
 
 #background {
-  background: #ffffff;
+  background: #aaaaaa;
 }
 
 #overlapping canvas {
@@ -24,10 +24,18 @@ canvas {
   float: left;
   width: 280px;
   padding: 0 10px;
+  color: black;
+  font-size: 20px;
+  text-align: center;
+
+  .block {
+    display: block;
+    margin: 10px 0;
+  }
 }
 
 .user {
-  color: white;
+  color: black;
   font-size: 25px;
   text-align: center;
   text-transform: uppercase;
