Add canvas width and height

--- a/app/assets/stylesheets/schotten_totten.css.scss
+++ b/app/assets/stylesheets/schotten_totten.css.scss
@@ -8,11 +8,9 @@ body {
 
 canvas {
   display: block;
-  width: 900px;
-  height: 600px;
 }
 
-#background {
+#canvasBg {
   background: #aaaaaa;
 }
 
