--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,7 +1,7 @@
 #game
-  %canvas#background
+  %canvas#canvasBg{width: 900, height: 600}
   #overlapping
-    %canvas#entities
+    %canvas#canvasEntities{width: 900, height: 600}
 
 #users
   %span.block Waiting Oponent...
