--- a/app/assets/javascripts/app/templates/user.jst.ejs
+++ b/app/assets/javascripts/app/templates/user.jst.ejs
@@ -1,1 +1,2 @@
-<%= username %>
+<%= username %><%= (game.model.get('turn_id') == id) ? '(TURN)' : '' %>
+<%= console.log('ID: ' + id + ' turn: ' + game.model.get('turn_id')) %>
